Thu Feb 17 14:52:57 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcombobox.c: Pass gtk_widget_get_toplevel() a GTK_WIDGET.

2005-02-16  Matthias Clasen  <mclasen@redhat.com>

	* docs/iconcache.txt: Add some information about the
	icon cache format (since I can't locate it at freedesktop.org)

	Fixes for #143829, Tommi Komulainen, Christian Persch:
	
	* gtk/gtktreeview.c (gtk_tree_view_destroy): Remove the
	typeselect_flush_timeout when destroying the widgets
	it is operating on.  
	(gtk_tree_view_ensure_interactive_directory): Add the 
	popup to the window group of the toplevel it belongs to.

	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget) 
	(gtk_combo_box_popup): Do the same here. 

2005-02-14  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Kill --enable-ansi  (#164394)

2005-02-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkpathbar.c (gtk_path_bar_finalize): Stop scrolling 
	when the pathbar goes away.  (#167094, Rodney Dawes)
	(change_icon_theme): Use GTK_ICON_SIZE_MENU here as 
	well  (Vincent Noel)

2005-02-11  Matthias Clasen  <mclasen@redhat.com>

	Support vertical menubars  (#166632): 
	
	* gtk/gtkenums.h (GtkPackDirection): New enumeration for pack 
	directions, with values for left-to-right, right-to-left, 
	top-to-bottom and bottom-to-top.

	* gtk/gtk.symbols: 
	* gtk/gtkmenubar.h: 
	* gtk/gtkmenubar.c: Add two properties, pack-direction and
	child-pack-direction, which specify how children and 
	grandchildren of a menubar are packed, with getters and setters. 

	* gtk/gtkmenubar.c (gtk_menu_bar_set_property): 
	(gtk_menu_bar_get_property): Implement set_property and get_property.

	* gtk/gtkmenubar.c (gtk_menu_bar_size_request): 
	(gtk_menu_bar_size_allocate): Take pack direction into account.

	* gtk/gtkmenubar.c (gtk_menu_bar_move_current): Implement 
	move_current here move all the menubar-specific direction 
	tweaking from the generic menushell implementation here.
